--- a/App/package.json
+++ b/App/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "game-js",
+  "name": "gamejs-app",
   "version": "1.0.0-alpha1",
-  "description": "",
+  "description": "The unbuilt app for GameJS",
   "main": "main.js",
   "scripts": {
-    "test": "node main.js"
+    "test": "electron ."
   },
   "author": "Jack Freund (Jackkillian on GitHub)",
   "license": "MIT",
   "dependencies": {
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0"
+    "electron": "^8.1.0"
   }
 }
