--- a/Games/sampleGame/config.json
+++ b/Games/sampleGame/config.json
@@ -1,10 +1,17 @@
 {
     "name":"Sample Game",
+    "description":"The sample game for GameJS. Used for test purposes.",
+    "version":"1.0",
+    "GameJSVersion":"1.0-alpha2",
     "author":"Jack Freund (Jackkillian on GitHub)",
     "copyright":"Copyright (c) 2020 Jack Freund",
     "credits":"No extra credits.",
+    "logo":"logo.png",
+    "website":"[none]",
+    "resources":{
+    		"/phaser.js":"Phaser"
+    },
+    "overrideFiles":false,
     "files":{
-        "/":"index.html",
-        "/favicon.ico":"favicon.ico"
     }
 }
